# src/lookup/src/features/redux/webApi.ts
@@ -1,5 +1,5 @@
 import { emptySplitApi as api } from "./emptyApi";
-import connection from "../../services/signalr"
+import connection from "../../services/signalr";
 const injectedRtkApi = api.injectEndpoints({
   endpoints: (build) => ({
     lookupFollowUser: build.mutation<
@@ -34,6 +34,7 @@ const injectedRtkApi = api.injectEndpoints({
         try {
           await cacheDataLoaded;
           connection.on("lookupReceived", (message: LookupMessage) => {
+            console.log(message.content)
             updateCachedData((draft) => {
               /* For editing lookups
               const index = draft.findIndex(msg => msg.id == message.id);
@@ -61,6 +62,16 @@ const injectedRtkApi = api.injectEndpoints({
         body: queryArg.createLookupModel,
       }),
     }),
+    lookupEditLookup: build.mutation<
+      LookupEditLookupApiResponse,
+      LookupEditLookupApiArg
+    >({
+      query: (queryArg) => ({
+        url: `/api/v1/lookup/edit/${queryArg.id}`,
+        method: "POST",
+        body: queryArg.editLookupModel,
+      }),
+    }),
     weatherGet: build.query<WeatherGetApiResponse, WeatherGetApiArg>({
       query: () => ({ url: `/api/v1/weather` }),
     }),
@@ -85,14 +96,30 @@ export type LookupPostLookupApiResponse = unknown;
 export type LookupPostLookupApiArg = {
   createLookupModel: CreateLookupModel;
 };
+export type LookupEditLookupApiResponse = unknown;
+export type LookupEditLookupApiArg = {
+  id: string;
+  editLookupModel: EditLookupModel;
+};
 export type WeatherGetApiResponse = /** status 200  */ Weather;
 export type WeatherGetApiArg = void;
 export type LookupMessage = {
+  id?: string;
   content?: string;
-  timestamp?: string;
+  publisherUserId?: string;
   publisherUsername?: string;
+  timestamp?: string;
+  likes?: number;
+  edited?: boolean;
+  replyId?: string | null;
+  editedTimetamp?: string | null;
 };
 export type CreateLookupModel = {
+  content?: string;
+  edited?: boolean;
+  replyId?: string | null;
+};
+export type EditLookupModel = {
   content?: string;
 };
 export type Weather = {
@@ -105,5 +132,6 @@ export const {
   useLookupGetFollowingListQuery,
   useLookupGetReceivedMessagesQuery,
   useLookupPostLookupMutation,
+  useLookupEditLookupMutation,
   useWeatherGetQuery,
 } = injectedRtkApi;
